--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.1.0",
+    "@tanstack/react-query": "^5.18.1",
+    "@tanstack/react-query-devtools": "^5.18.1",
+    "@tanstack/react-query-next-experimental": "^5.18.1",
+    "@types/axios": "^0.14.0",
+    "@types/mapbox-gl": "^2.7.20",
+    "axios": "^1.6.7",
+    "clsx": "^2.1.0",
+    "mapbox-gl": "^3.1.2",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-map-gl": "^7.1.7",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "typescript": "^5"
   }
 }
