--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "@reduxjs/toolkit": "^2.1.0",
     "@tanstack/react-query": "^5.18.1",
     "@tanstack/react-query-devtools": "^5.18.1",
     "@tanstack/react-query-next-experimental": "^5.18.1",
     "@types/axios": "^0.14.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/mapbox-gl": "^2.7.20",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "mapbox-gl": "^3.1.2",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.9",
+    "prisma": "^5.9.1",
     "react": "^18",
     "react-dom": "^18",
     "react-map-gl": "^7.1.7",
