--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-map-gl": "^7.1.7",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
+    "ts-node": "^10.9.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
