--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
+    "croppr": "^2.3.1",
     "mapbox-gl": "^3.1.2",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.9",
