--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-map-gl": "^7.1.7",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
+    "sass": "^1.71.1",
+    "scss": "^0.2.4",
     "sharp": "^0.33.2",
     "ts-node": "^10.9.2",
     "zod": "^3.22.4"
