--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
@@ -23,6 +25,7 @@
     "clsx": "^2.1.0",
     "croppr": "^2.3.1",
     "mapbox-gl": "^3.1.2",
+    "msw": "^2.2.3",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.9",
     "react": "^18",
@@ -34,15 +37,23 @@
     "scss": "^0.2.4",
     "sharp": "^0.33.2",
     "ts-node": "^10.9.2",
+    "undici": "^6.7.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "nock": "^13.5.4",
     "prisma": "^5.10.2",
+    "ts-jest": "^29.1.2",
     "typescript": "^5"
   }
 }
