--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.18.1",
     "@tanstack/react-query-devtools": "^5.18.1",
     "@tanstack/react-query-next-experimental": "^5.18.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.2",
     "@types/mapbox-gl": "^2.7.20",
@@ -24,6 +25,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "croppr": "^2.3.1",
+    "jest-mock-extended": "^3.0.5",
     "mapbox-gl": "^3.1.2",
     "msw": "^2.2.3",
     "next": "14.1.0",
