--- a/package.json
+++ b/package.json
@@ -1,61 +1,62 @@
 {
-  "name": "guinness_map_next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:watch": "jest --watch"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.10.2",
-    "@reduxjs/toolkit": "^2.1.0",
-    "@tanstack/react-query": "^5.18.1",
-    "@tanstack/react-query-devtools": "^5.18.1",
-    "@tanstack/react-query-next-experimental": "^5.18.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/axios": "^0.14.0",
-    "@types/bcrypt": "^5.0.2",
-    "@types/mapbox-gl": "^2.7.20",
-    "axios": "^1.6.7",
-    "bcrypt": "^5.1.1",
-    "clsx": "^2.1.0",
-    "croppr": "^2.3.1",
-    "jest-mock-extended": "^3.0.5",
-    "mapbox-gl": "^3.1.2",
-    "msw": "^2.2.3",
-    "next": "14.1.0",
-    "next-auth": "^5.0.0-beta.9",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-map-gl": "^7.1.7",
-    "react-redux": "^9.1.0",
-    "redux": "^5.0.1",
-    "sass": "^1.71.1",
-    "scss": "^0.2.4",
-    "sharp": "^0.33.2",
-    "ts-node": "^10.9.2",
-    "undici": "^6.7.1",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "nock": "^13.5.4",
-    "prisma": "^5.10.2",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5"
-  }
+    "name": "guinness_map_next",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "postinstall": "prisma generate",
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+        "test:watch": "jest --watch",
+        "test:int": ".\\scripts\\run-integration.sh"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.10.2",
+        "@reduxjs/toolkit": "^2.1.0",
+        "@tanstack/react-query": "^5.18.1",
+        "@tanstack/react-query-devtools": "^5.18.1",
+        "@tanstack/react-query-next-experimental": "^5.18.1",
+        "@testing-library/user-event": "^14.5.2",
+        "@types/axios": "^0.14.0",
+        "@types/bcrypt": "^5.0.2",
+        "@types/mapbox-gl": "^2.7.20",
+        "axios": "^1.6.7",
+        "bcrypt": "^5.1.1",
+        "clsx": "^2.1.0",
+        "croppr": "^2.3.1",
+        "jest-mock-extended": "^3.0.5",
+        "mapbox-gl": "^3.1.2",
+        "msw": "^2.2.3",
+        "next": "14.1.0",
+        "next-auth": "^5.0.0-beta.9",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-map-gl": "^7.1.7",
+        "react-redux": "^9.1.0",
+        "redux": "^5.0.1",
+        "sass": "^1.71.1",
+        "scss": "^0.2.4",
+        "sharp": "^0.33.2",
+        "ts-node": "^10.9.2",
+        "undici": "^6.7.1",
+        "zod": "^3.22.4"
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^6.4.2",
+        "@testing-library/react": "^14.2.1",
+        "@types/jest": "^29.5.12",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "nock": "^13.5.4",
+        "prisma": "^5.10.2",
+        "ts-jest": "^29.1.2",
+        "typescript": "^5"
+    }
 }
