review list type

--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,3 @@
 DIRECT_URL=postgres://postgres:postgres@localhost:5432/guinnessmap
+# needed to be DIRECT_URL not DATABASE_URL to stop it from reading from .env
 NEXT_PUBLIC_URL=http://localhost:3000
