truly sick of jest

--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,5 @@
-DIRECT_URL=postgres://postgres:postgres@localhost:5432/guinnessmap
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/guinnessmap
+
 # needed to be DIRECT_URL not DATABASE_URL to stop it from reading from .env
+# ^^^^^^ now seems to be untrue 
 NEXT_PUBLIC_URL=http://localhost:3000
