--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "test:int": ".\\scripts\\run-integration.sh"
     },
     "dependencies": {
+        "@babel/core": "^7.24.0",
+        "@babel/preset-env": "^7.24.0",
         "@prisma/client": "^5.10.2",
         "@reduxjs/toolkit": "^2.1.0",
         "@tanstack/react-query": "^5.18.1",
@@ -23,6 +25,7 @@
         "@types/bcrypt": "^5.0.2",
         "@types/mapbox-gl": "^2.7.20",
         "axios": "^1.6.7",
+        "babel-jest": "^29.7.0",
         "bcrypt": "^5.1.1",
         "clsx": "^2.1.0",
         "croppr": "^2.3.1",
