--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "sharp": "^0.33.2",
         "ts-node": "^10.9.2",
         "undici": "^6.7.1",
+        "uuid": "^9.0.1",
         "zod": "^3.22.4"
     },
     "devDependencies": {
@@ -54,6 +55,7 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/uuid": "^9.0.8",
         "eslint": "^8",
         "eslint-config-next": "14.1.0",
         "jest": "^29.7.0",
