--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,4 @@ DATABASE_URL=postgres://postgres:postgres@localhost:5432/guinnessmap
 # needed to be DIRECT_URL not DATABASE_URL to stop it from reading from .env
 # ^^^^^^ now seems to be untrue 
 NEXT_PUBLIC_URL=http://localhost:3000
+NEXT_PUBLIC_AWS_BACKEND=https://1mfzxupdr1.execute-api.eu-west-2.amazonaws.com/
