--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
         "jest-mock-extended": "^3.0.5",
         "mapbox-gl": "^3.1.2",
         "msw": "^2.2.3",
-        "next": "14.1.0",
+        "next": "^14.1.0",
         "next-auth": "^5.0.0-beta.9",
-        "react": "^18",
-        "react-dom": "^18",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-map-gl": "^7.1.7",
         "react-redux": "^9.1.0",
         "redux": "^5.0.1",
@@ -53,8 +53,8 @@
         "@testing-library/react": "^14.2.1",
         "@types/jest": "^29.5.12",
         "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
+        "@types/react": "^18.2.71",
+        "@types/react-dom": "^18.2.22",
         "@types/uuid": "^9.0.8",
         "eslint": "^8",
         "eslint-config-next": "14.1.0",
