--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-jest": "^29.7.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
+    "compressorjs": "^1.2.1",
     "croppr": "^2.3.1",
     "earcut": "^2.2.4",
     "jest-mock-extended": "^3.0.5",
@@ -39,7 +40,10 @@
     "next": "^14.1.0",
     "next-auth": "^5.0.0-beta.9",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.0.6",
+    "react-image-file-resizer": "^0.4.8",
     "react-map-gl": "^7.1.7",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
