--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "msw": "^2.2.3",
     "next": "^14.1.0",
     "next-auth": "^5.0.0-beta.9",
+    "notiflix": "^3.2.7",
     "react": "^18.2.0",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
