--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "croppr": "^2.3.1",
     "earcut": "^2.2.4",
     "jest-mock-extended": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "mapbox-gl": "^3.1.2",
     "mapbox-gl-heatmap-canvas": "^0.1.5",
     "msw": "^2.2.3",
